--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,12 @@ html {
 body{
     overflow-x: hidden;
 }
-
+body.before-load{
+    overflow: hidden;
+}
+.before-load .container {
+    display: none;
+} 
 .loading{
     display: flex;
     align-items: center;
@@ -141,6 +146,7 @@ body{
     margin: -8em auto 0;
     font-size: 1.5rem;
     color: #666E72;
+    max-width: 800px;
 }
 #scroll-section-1 strong{
     font-size: 4rem;
@@ -208,7 +214,7 @@ body{
     align-items: center;
 }
 .mid-message {
-	max-width: 1000px;
+	max-width: 800px;
 	margin: 0 auto;
 	padding: 0 1rem;
 	font-size: 2rem;
@@ -227,7 +233,9 @@ body{
 #scroll-section-3 #scroll-section-3 .sticky-elem{
     display:block;
     opacity: 1;
+    will-change: transform, opacity;
 }
+
 .blend_image_canvas.sticky{
     position : fixed;
     top:0;
